==> whitcloudfly/CUBE_NANDO_HAL/programmer0/Core/Src/spi_nand_flash.c <==
#include "spi_nand_flash.h"
#include "spi.h"
#include "gpio.h"
#include <stm32f4xx.h>
#define _SPI_NAND_OP_GET_FEATURE                0x0F    /* 获取特性 */
#define _SPI_NAND_OP_SET_FEATURE                0x1F    /* 设置特性 */
#define _SPI_NAND_OP_PAGE_READ                  0x13    /* 将页数据加载到SPI NAND芯片的缓存中 */
#define _SPI_NAND_OP_READ_FROM_CACHE_SINGLE     0x03    /* 从SPI NAND芯片的缓存中读取数据，单速度 */
#define _SPI_NAND_OP_READ_FROM_CACHE_DUAL       0x3B    /* 从SPI NAND芯片的缓存中读取数据，双速度 */
#define _SPI_NAND_OP_READ_FROM_CACHE_QUAD       0x6B    /* 从SPI NAND芯片的缓存中读取数据，四速度 */
#define _SPI_NAND_OP_WRITE_ENABLE               0x06    /* 启用将数据写入SPI NAND芯片 */
#define _SPI_NAND_OP_WRITE_DISABLE              0x04    /* 复位写使能锁存器（WEL） */
#define _SPI_NAND_OP_PROGRAM_LOAD_SINGLE        0x02    /* 将数据写入带有缓存复位的SPI NAND芯片的缓存，单速度 */
#define _SPI_NAND_OP_PROGRAM_LOAD_QUAD          0x32    /* 将数据写入带有缓存复位的SPI NAND芯片的缓存，四速度 */
#define _SPI_NAND_OP_PROGRAM_LOAD_RAMDOM_SINGLE 0x84    /* 将数据写入SPI NAND芯片的缓存，单速度 */
#define _SPI_NAND_OP_PROGRAM_LOAD_RAMDON_QUAD   0x34    /* 将数据写入SPI NAND芯片的缓存，四速度 */
#define _SPI_NAND_OP_PROGRAM_EXECUTE            0x10    /* 将缓存中的数据写入SPI NAND芯片 */
#define _SPI_NAND_OP_READ_ID                    0x9F    /* 读取制造商ID和设备ID */
#define _SPI_NAND_OP_BLOCK_ERASE                0xD8    /* 擦除块 */
#define _SPI_NAND_OP_RESET                      0xFF    /* 复位 */
#define _SPI_NAND_OP_DIE_SELECT                 0xC2    /* 选择Die */
#define _SPI_NAND_ADDR_ECC                      0x90    /* ECC配置的地址 */

static void spi_flash_gpio_init()
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_SPI1_CLK_ENABLE();

    __HAL_RCC_GPIOA_CLK_ENABLE();
    __HAL_RCC_GPIOB_CLK_ENABLE();
    /**SPI1 GPIO Configuration
    PA6     ------> SPI1_MISO
    PA7     ------> SPI1_MOSI
    PB3     ------> SPI1_SCK
    PB4     ------> SPI1_CS
    */
    GPIO_InitStruct.Pin = SPI1_SCK_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(SPI1_SCK_GPIO_Port, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SPI1_MOSI_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//	    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ__MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SPI1_MISO_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//	    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);


    /*Configure GPIO pin : PtPin */
    GPIO_InitStruct.Pin = SPI1_CS_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
    HAL_GPIO_Init(SPI1_CS_GPIO_Port, &GPIO_InitStruct);
}

static void spi_flash_gpio_uninit()
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_SPI1_CLK_DISABLE();

    /**SPI1 GPIO Configuration
    PA6     ------> SPI1_MISO
    PA7     ------> SPI1_MOSI
    PB3     ------> SPI1_SCK
    PB4     ------> SPI1_CS
    */
    GPIO_InitStruct.Pin = SPI1_SCK_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(SPI1_SCK_GPIO_Port, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SPI1_MOSI_Pin;
//    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//	    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ__MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = SPI1_MISO_Pin;
//    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//	    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_MEDIUM;
    GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);


    /*Configure GPIO pin : PtPin */
    GPIO_InitStruct.Pin = SPI1_CS_Pin;
//    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
//    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
    HAL_GPIO_Init(SPI1_CS_GPIO_Port, &GPIO_InitStruct);
}

static inline void spi_flash_select_chip()
{
//    GPIO_ResetBits(GPIOA, SPI_FLASH_CS_PIN);
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI_FLASH_CS_PIN, GPIO_PIN_RESET);
}

static inline void spi_flash_deselect_chip()
{
//    GPIO_SetBits(GPIOA, SPI_FLASH_CS_PIN);
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI_FLASH_CS_PIN, GPIO_PIN_SET);
}

static uint16_t spi_flash_get_baud_rate_prescaler(uint32_t spi_freq_khz)
{
    uint32_t system_clock_khz = SystemCoreClock / 1000;

    if (spi_freq_khz >= system_clock_khz / 2)
        return SPI_BAUDRATEPRESCALER_2;
    else if (spi_freq_khz >= system_clock_khz / 4)
        return SPI_BAUDRATEPRESCALER_4;
    else if (spi_freq_khz >= system_clock_khz / 8)
        return SPI_BAUDRATEPRESCALER_8;
    else if (spi_freq_khz >= system_clock_khz / 16)
        return SPI_BAUDRATEPRESCALER_16;
    else if (spi_freq_khz >= system_clock_khz / 32)
        return SPI_BAUDRATEPRESCALER_32;
    else if (spi_freq_khz >= system_clock_khz / 64)
        return SPI_BAUDRATEPRESCALER_64;
    else if (spi_freq_khz >= system_clock_khz / 128)
        return SPI_BAUDRATEPRESCALER_128;
    else
        return SPI_BAUDRATEPRESCALER_256;
}

static int spi_flash_init(void *conf, uint32_t conf_size)
{
    SPI_InitTypeDef spi_init;

    if (conf_size < sizeof(spi_conf_t))
        return -1; 
    spi_conf = *(spi_conf_t *)conf;

    spi_flash_gpio_init();  // 初始化SPI Flash的GPIO引脚

    spi_flash_deselect_chip();  // 取消片选信号，SPI Flash不被选中

    /* 配置SPI */
    hspi1.Init.Direction = SPI_DIRECTION_2LINES; // SPI双线全双工模式
    hspi1.Init.Mode = SPI_MODE_MASTER;           // 主模式
    hspi1.Init.DataSize = SPI_DATASIZE_8BIT;     // 数据大小为8位
    hspi1.Init.CLKPolarity = SPI_POLARITY_HIGH;  // 时钟极性为高电平时有效
    hspi1.Init.CLKPhase = SPI_PHASE_2EDGE;       // 时钟相位为第2个边沿（上升沿）有效
    hspi1.Init.NSS = SPI_NSS_SOFT;               // 使用软件管理片选信号
    hspi1.Init.BaudRatePrescaler = spi_flash_get_baud_rate_prescaler(spi_conf.freq); // 设置波特率预分频值（假设spi_conf.freq是你的频率设置）
    hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;      // 数据传输的起始位为最高有效位
    hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE; // 禁用CRC校验
    hspi1.Init.CRCPolynomial = 10;               // CRC校验多项式（不使用CRC时此值无关紧要）
    if (HAL_SPI_Init(&hspi1) != HAL_OK)
    {
      Error_Handler();
    }  // 根据以上配置初始化SPI1

    /* 使能SPI */
//    SPI_Cmd(SPI1, ENABLE);
    spi_flash_chip_init();  // 初始化SPI Flash芯片

    return 0;
}

static uint8_t spi_flash_send_byte(uint8_t byte)
{
    uint8_t rxData;

    // 等待SPI空闲
    while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);

    // 发送数据
    HAL_SPI_Transmit(&hspi1, &byte, 1, HAL_MAX_DELAY);

    // 接收数据
    HAL_SPI_Receive(&hspi1, &rxData, 1, HAL_MAX_DELAY);

    return rxData;
}
